--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background: url(images/bg-image.jpg) no-repeat;
+            background: url(bg-image.jpg) no-repeat;
             background-size: cover;
             height: 100vh;
         }
@@ -20,22 +20,24 @@
 
 <body>
     <div class="container">
+        <h1 class="text-white text-center mt-3">Weather App</h1>
         <form class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter a location for Weather ...">
+                <input id="search-text" type="text" class="form-control" placeholder="Enter a location for Weather ...">
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-danger">Search</button>
+                    <button onclick="searchWeather()" type="button" class="btn btn-danger">Search</button>
                 </div>
             </div>
         </form>
         <div class="weather-status text-white text-center">
-            <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
-            <h1>Dhaka</h1>
-            <h3><span>38.06</span>&deg;C</h3>
-            <h1 class="lead">Clouds</h1>
+            <img id="icon" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
+            <h1 class="text-danger" id="city">Dhaka</h1>
+            <h3><span id="tempareture">38.06</span>&deg;C</h3>
+            <h4 class="text-warning">Feels like <span id="feel">38.06</span>&deg;C</h4>
+            <h1 class="lead text-success font-weight-bolder" id="cloud">Clouds</h1>
         </div>
     </div>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
